vcs/specs/parser/fail/statements/incomplete_call.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, expression, call, incomplete, error
// @description: Test incomplete function call expression
// @expected-error: E012

fn test() {
    foo(;
}
